kyy-k8s-config/practices/practice-rollupdate/practice-rollupdate-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name:  practice-rollupdate
  labels:
    app: practice-rollupdate
  namespace: default
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 3 # pod 数量
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: practice-rollupdate
  strategy:
    # 滚动更新
    rollingUpdate:
      maxSurge: 1 # 最大
      maxUnavailable: 1 # 最大不可用数量
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: practice-rollupdate
    spec:
      containers:
        - name: practice-rollupdate
          image: nginx:1.12
          imagePullPolicy: Always
          # 存活检测
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          ports:
            - containerPort: 80
              protocol: TCP
          # 准备检测
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
