kyy-k8s-config/practices/practice-rollupdate/practice-rollupdate-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: practice-rollupdate
  name: practice-rollupdate
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: practice-rollupdate
